test_res20.txt
[DEBUG parseFuncDecl] nameToken=test1, peek()==, type=168
PARSING CAST: token=CAST_UNCHECKED isUnchecked=1
[DEBUG parseFuncDecl] nameToken=main, peek()==, type=168
[DEBUG parseFuncDecl] nameToken=failsafe, peek()==, type=168
[1mtest_res20.npk:4:27: [0m[1;31merror[0m: [1m  Expected expression
  Found: token 'pass'[0m
    4 |         Result<int64>:r = pass 1i64;
                                  [1;32m^[0m

[1mtest_res20.npk:4:27: [0m[1;31merror[0m: [1m  Expected ';' after variable declaration
  Found: token 'pass'[0m
    4 |         Result<int64>:r = pass 1i64;
                                  [1;32m^[0m

[1mSummary: [0m[1;31m2 errors[0m
